@@ -292,11 +292,12 @@ ccm_menu_animation_on_error (CCMMenuAnimation* self, CCMWindow* window)
 static gboolean
 ccm_menu_animation_get_duration(CCMMenuAnimation* self)
 {
-	gfloat duration = 
+	gfloat real_duration = 
 		ccm_config_get_float(self->priv->options[CCM_MENU_ANIMATION_DURATION]);
+	gfloat duration;
 	
-	duration = MAX(0.1f, duration);
-	duration = MIN(2.0f, duration);
+	duration = MAX(0.1f, real_duration);
+	duration = MIN(2.0f, real_duration);
 	if (duration != self->priv->duration)
 	{
 		CCMScreen* screen = ccm_drawable_get_screen(CCM_DRAWABLE(self->priv->window));
@@ -307,8 +308,9 @@ ccm_menu_animation_get_duration(CCMMenuAnimation* self)
 		if (self->priv->timeline) g_object_unref (self->priv->timeline);
 
 		self->priv->duration = duration;
-		ccm_config_set_float(self->priv->options[CCM_MENU_ANIMATION_DURATION],
-							 self->priv->duration);
+		if (duration != real_duration)
+			ccm_config_set_float(self->priv->options[CCM_MENU_ANIMATION_DURATION],
+								 self->priv->duration);
 		
 		self->priv->timeline = ccm_timeline_new((int)(refresh_rate * duration), 
 												refresh_rate);
